# synapless

./: .gitignore  README.md  install-service.bat  pyproject.toml  release-notes.md  requirements.txt  run.py  start.bat  synapless.spec
.github/workflows/: release.yml
docs/: tartarus-pro-analog-research.md
driver/kbfiltr/: build.bat  build_clean.bat  kbfiltr.c  kbfiltr.h  kbfiltr.inf  kbfiltr.sys
pylib/: client.py
rthooks/: add_dll_dir.py
scripts/: sync_devices.py  tartarus_hid_explore.py
service/: api.py  daemon.py  device_manager.py  driver_install.py  kbfiltr_client.py  macro_manager.py  main.py
service/hardware/: __init__.py  device_base.py  keyboards.py  mouse.py
service/hid_layer/: effects.py  protocol.py  transport.py
service/static/: index.html
