[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synapless"
version = "0.2.0"
description = "Razer peripheral control for Windows — no Synapse required"
license = { text = "GPL-2.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "hid>=1.0.6",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
client = ["httpx>=0.27"]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
synapless = "service.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["service*", "pylib*"]
